@@ -112,7 +112,8 @@ class TKENV_API Tkenv : public EnvirBase
       eState simstate;             // state of the simulation run
       int runmode;                 // the current mode the simulation is executing under
       simtime_t rununtil_time;     // time limit in current "Run Until" execution, or zero
-      eventnumber_t rununtil_event;// event number in current "Run Until" execution, or zero
+      eventnumber_t rununtil_eventnum;// event number in current "Run Until" execution, or zero
+      cMessage *rununtil_msg;      // stop before this event; also when this message gets cancelled
       cModule *rununtil_module;    // stop before and after events in this module; ignored with EXPRESS mode
 
       bool stopsimulation_flag;    // indicates that the simulation should be stopped (STOP button pressed in the UI)
@@ -180,9 +181,9 @@ class TKENV_API Tkenv : public EnvirBase
 
       void rebuildSim();
       void doOneStep();
-      void runSimulation(int mode, simtime_t until_time=0, eventnumber_t until_event=0, cModule *until_module=NULL);
+      void runSimulation(int mode, simtime_t until_time=0, eventnumber_t until_eventnum=0, cMessage *until_msg=NULL, cModule *until_module=NULL);
       void setSimulationRunMode(int runmode);
-      void setSimulationRunUntil(simtime_t until_time, eventnumber_t until_event);
+      void setSimulationRunUntil(simtime_t until_time, eventnumber_t until_eventnum, cMessage *until_msg);
       void setSimulationRunUntilModule(cModule *until_module);
       bool doRunSimulation();
       bool doRunSimulationExpress();
